testdata/baselines/reference/submodule/conformance/jsdocImplements_missingType.errors.txt
/a.js(2,16): error TS8005: 'implements' clauses can only be used in TypeScript files.


==== /a.js (1 errors) ====
    class A { constructor() { this.x = 0; } }
    /** @implements */
                   
!!! error TS8005: 'implements' clauses can only be used in TypeScript files.
    class B  {
    }
    